[workspace]
members = ["devtools"
,"jsonrpc"
,"chain"
,"chain/core"
,"chain/types"
,"consensus/tdmint"
,"network"
,"tests/trans_evm"
,"tests/chain_performance"
,"tests/amqp/request"
,"tests/amqp/response"
,"tests/latency/latency_res"
,"tests/latency/latency_req"
]
exclude = [
"share_libs/parity"
]


